# filaflow-totem

./: .gitignore  Aplicação Totem Desktop (Python + PyQt6).md  README.md  pyproject.toml  requirements.txt  run.py  totem.spec
scripts/: build.bat  build.sh
totem/: __init__.py  __main__.py  app.py  bridge.py  config_screen.py  config_store.py  escpos_encoding.py  kiosk_screen.py  paths.py  printing.py
